myapp/static/myapp/css/home.css
.myslideshow {
  height: calc(100vh - (0.14745308311 * 480px * 2) - 40px);
  max-height: 620px;
  width: 100vw;
  position: relative;
}

.myslide {
  height: calc(100vh - (0.14745308311 * 480px * 2) - 40px);
  width: 100vw;
  max-height: 620px;
  opacity: 0;
  position: absolute;
  top: 0;
}

.slideimg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  padding-left: 20px;
  padding-right: 20px;
  height: auto;

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.mobile_box_container {
  display: none;
}

.mobile_box {
  position: relative;
  border-style: solid;
  border-width: 3px;
  margin: auto;
  margin-bottom: 40px;
  margin-top: 40px;
  border-color: #999999;
  height: calc(100vw - 40px);
  width: calc(100vw - 40px);
}

.mobile_box > img {
  width: 100%;
}
.mobile_box > div {
  font-size: 50px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}


/* mobile in portrait mode */
@media screen and (max-width: 481px) {
  .mobile_box_container {
    display: inline;
  }

  .myslideshow {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }
  .myslide {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }
}

/* if window is too short to fit full menu below slideshow, make it mobile version */
/* Used to have a big equation here, it wasn't working that well so I just figured it
   out empirically. This makes it so when the window becomes too short so that the
   portrait slideshow is too narrow to be wider than the menu below it, we display
   the mobile menu instead. */
@media screen and (max-height: 700px) {
  #menu {
    display: initial;
    margin: 20px;
  }
  
  #links a {
    display: none;
  }
}

